--- a/dino.css
+++ b/dino.css
@@ -4,6 +4,116 @@ body {
 }
 
 #board {
+
+    background-color: lightgray;
+    border-bottom: 1px solid black;
+    z-index: 0;
+    
+}
+
+#game-over {
+    z-index: 900;
+    position: relative;
+    font-size: 2rem;
+    display: none;
+    text-align: center;
+}
+
+body {
+    font-family:'Courier New', Courier, monospace;
+    text-align: center;
+}
+
+#board {
     background-color: lightgray;
     border-bottom: 1px solid black;
 }
+
+h2{
+    font-size: 3rem;
+    margin-top: 60px;
+    margin-bottom: 70px;
+}
+
+.character-selection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.Row1{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-bottom: 50px;
+}
+.Row2{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-bottom: 50px;
+}
+.Row3{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.character-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    max-width: 300px;
+}
+
+.character {
+    width: 88px;
+    height: 94px;
+    cursor: pointer;
+}
+
+.game-container {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.back-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
+#game-over { 
+    z-index: 900; 
+    position: relative; 
+    top: -450px; 
+    font-size: 3rem; 
+    display: none; 
+}
+  
+
+#board {
+    width: 750px;
+    height: 550px;
+    background: url('/img/sky.png') repeat-x;
+    background-size: cover;
+}
+.scroll-animation {
+    animation: scroll 3s linear infinite;
+}
+
+@keyframes scroll {
+    from { background-position : 0 0;}
+    to { background-position: 100% 0;}
+}
+
